--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node index.js"
+  },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
@@ -7,9 +11,9 @@
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.13.0",
-    "main":"index.js",
-    "scripts": {
-      "start":"node index"
-    }
+    "main":"index.js"
+
+   
+
   }
 }
