--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "express": "^4.21.2",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.13.0",
+    "mysql2": "^3.13.0"
    
 
    
