--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.13.0",
-    "main":"index.js"
-
-   
-
+    "mysql2": "^3.13.0"
   }
 }
